--- a/frontend/hackerton2023/package.json
+++ b/frontend/hackerton2023/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@twistezo/react-text-scramble": "^1.0.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
@@ -15,6 +16,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "scrambling-text": "^1.2.0",
     "styled-components": "^5.3.8",
     "styled-reset": "^4.4.5",
     "typescript": "^4.9.5",
