--- a/frontend/hackerton2023/package.json
+++ b/frontend/hackerton2023/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "scrambling-text": "^1.2.0",
     "styled-components": "^5.3.8",
     "styled-reset": "^4.4.5",
