--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: react
     ports:
       - '4000:4000'
+    env_file:
+      - ./frontend/.env
     volumes:
       - react:/usr/src/app
     networks:
@@ -19,8 +21,6 @@ services:
     container_name: nestjs 
     ports:
       - 3000:3000
-    env_file:
-      - .env
     networks:
       - hackerton_gam4
     volumes:
