--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - hackerton_gam4
     volumes:
-      - ./:/pwd #volume directroy
+      - nestjs:/pwd #volume directroy
     restart: on-failure
     # depends_on:
     #   postgres:
