--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     env_file:
       - ./frontend/.env
     volumes:
-      - ./frontend:/usr/src/app
+      - react:/usr/src/app
     networks:
       - hackerton_gam4
     restart: on-failure
@@ -26,7 +26,7 @@ services:
     env_file:
       - ./nestjs/.env
     volumes:
-      - ./nestjs:/pwd #volume directroy
+      - nestjs:/pwd #volume directroy
         # - ./:/pwd #volume directroy
     restart: on-failure
     # depends_on:
