--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ node_modules/
 dist/
 /.pnp
 .pnp.js
-./frontend/.env
-./nestjs/.env
 
 # testing
 /coverage
@@ -23,4 +21,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# dotenv environment variable files
 ./nestjs/.env
+/.env
