--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,5 +53,5 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://nestjs:3000"
 }
