--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     build: ./frontend/
     container_name: react
     ports:
-      - "4000:4000"
+      - 4000:4000
     env_file:
-      - ./frontend/.env
+      - .env
     volumes:
       - react:/usr/src/app
     networks:
@@ -37,10 +37,8 @@ services:
     container_name: postgres
     ports:
       - 5432:5432
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     networks:
       - hackerton_gam4
     volumes:
