--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     env_file:
       - .env
     volumes:
-      - nestjs:/pwd #volume directroy
+      - nestjs:/pwd
     restart: on-failure
     depends_on:
       postgres:
@@ -42,7 +42,7 @@ services:
     networks:
       - hackerton_gam4
     volumes:
-      - postgres:/var/lib/postgresql/data #volume directroy
+      - postgres:/var/lib/postgresql/data
     restart: on-failure
 
 networks:
